--- a/.builds/alpine.yml
+++ b/.builds/alpine.yml
@@ -1,9 +1,12 @@
 image: alpine/edge
 sources:
-  - https://git.sr.ht/~mcf/cc
-  - git://c9x.me/qbe.git
+- https://git.sr.ht/~mcf/cc
+- git://c9x.me/qbe.git
+environment:
+  PATH: $HOME/qbe/obj:$PATH
 tasks:
-  - build: |
-      make -C qbe
-      echo 'CFLAGS=-DDYNAMICLINKER=\"/lib/ld-musl-x86_64.so.1\"' >cc/config.mk
-      PATH=$PWD/qbe/obj:$PATH make -C cc all check bootstrap
+- build: |
+    make -C qbe
+    cd cc
+    ./configure
+    make all check bootstrap
