--- a/.builds/freebsd.yml
+++ b/.builds/freebsd.yml
@@ -1,6 +1,6 @@
 image: freebsd/latest
 sources:
-- https://git.sr.ht/~mcf/cc
+- https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
 packages:
 - gmake
@@ -9,6 +9,6 @@ environment:
 tasks:
 - build: |
     gmake -C qbe
-    cd cc
+    cd cproc
     ./configure
     make all check bootstrap
