--- a/.builds/nixos.yml
+++ b/.builds/nixos.yml
@@ -1,6 +1,6 @@
 image: nixos/latest
 sources:
-- https://git.sr.ht/~mcf/cc
+- https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
 repositories:
   nixpkgs: https://nixos.org/channels/nixpkgs-unstable
@@ -12,6 +12,6 @@ environment:
 tasks:
 - build: |
     make -C qbe
-    cd cc
+    cd cproc
     ./configure --with-ldso=
     make all check bootstrap
