--- a/.builds/openbsd.yml
+++ b/.builds/openbsd.yml
@@ -1,6 +1,6 @@
 image: openbsd/latest
 sources:
-- https://git.sr.ht/~mcf/cc
+- https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
 packages:
 - gmake
@@ -9,9 +9,9 @@ environment:
 tasks:
 - setup: |
     # avoid __asm__ on non __GNUC__ compilers
-    doas patch -d /usr/include/amd64 < cc/.builds/openbsd.diff
+    doas patch -d /usr/include/amd64 < cproc/.builds/openbsd.diff
 - build: |
     gmake -C qbe
-    cd cc
+    cd cproc
     ./configure
     make all check bootstrap
