--- a/.builds/freebsd.yml
+++ b/.builds/freebsd.yml
@@ -12,3 +12,7 @@ tasks:
     cd cproc
     ./configure
     make all check bootstrap
+triggers:
+- action: email
+  condition: failure
+  to: ~mcf/cproc@lists.sr.ht
