--- a/.builds/nixos.yml
+++ b/.builds/nixos.yml
@@ -15,3 +15,7 @@ tasks:
     cd cproc
     ./configure --with-ldso=
     make all check bootstrap
+triggers:
+- action: email
+  condition: failure
+  to: ~mcf/cproc@lists.sr.ht
