--- a/.builds/debian.yml
+++ b/.builds/debian.yml
@@ -2,10 +2,9 @@ image: debian/stretch
 sources:
 - https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
-environment:
-  PATH: $HOME/qbe/obj:$PATH
 tasks:
 - build: |
+    PATH=$HOME/qbe/obj:$PATH
     make -C qbe
     cd cproc
     ./configure
