--- a/.builds/freebsd.yml
+++ b/.builds/freebsd.yml
@@ -4,10 +4,9 @@ sources:
 - git://c9x.me/qbe.git
 packages:
 - gmake
-environment:
-  PATH: $HOME/qbe/obj:$PATH
 tasks:
 - build: |
+    PATH=$HOME/qbe/obj:$PATH
     gmake -C qbe
     cd cproc
     ./configure
