Update CI for new QBE Makefile

--- a/.builds/alpine-aarch64.yml
+++ b/.builds/alpine-aarch64.yml
@@ -4,7 +4,7 @@ packages:
 - qemu-openrc
 sources:
 - https://git.sr.ht/~mcf/cproc
-- https://git.sr.ht/~mcf/qbe
+- git://c9x.me/qbe.git
 tasks:
 - setup: |
     # work around bugs in qemu-binfmt
@@ -13,7 +13,7 @@ tasks:
     curl -O http://musl.cc/aarch64-linux-musl-cross.tgz
     tar --warning=no-unknown-keyword -xzf aarch64-linux-musl-cross.tgz
 - build: |
-    PATH=$HOME/qbe/obj:$HOME/aarch64-linux-musl-cross/bin:$PATH
+    PATH=$HOME/qbe:$HOME/aarch64-linux-musl-cross/bin:$PATH
     cd qbe
     cat >config.h <<EOF
     #define Defasm Gaself
