--- a/.builds/netbsd.yml
+++ b/.builds/netbsd.yml
@@ -2,14 +2,12 @@ image: netbsd/latest
 sources:
 - https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
-packages:
-- gmake
 tasks:
 - setup: |
     sudo patch -p1 -d /usr/include < cproc/.builds/netbsd.diff
 - build: |
-    PATH=$HOME/qbe/obj:$PATH
-    gmake -C qbe
+    PATH=$HOME/qbe:$PATH
+    make -C qbe
     cd cproc
     ./configure
     make all check bootstrap
