--- a/.builds/alpine.yml
+++ b/.builds/alpine.yml
@@ -7,7 +7,7 @@ sources:
 - git://c9x.me/qbe.git
 tasks:
 - build: |
-    PATH=$HOME/qbe/obj:$PATH
+    PATH=$HOME/qbe:$PATH
     make -C qbe
     cd cproc
     ./configure
