--- a/.builds/openbsd.yml
+++ b/.builds/openbsd.yml
@@ -2,15 +2,13 @@ image: openbsd/latest
 sources:
 - https://git.sr.ht/~mcf/cproc
 - git://c9x.me/qbe.git
-packages:
-- gmake
 tasks:
 - setup: |
     # avoid __asm__ on non __GNUC__ compilers
     doas patch -d /usr/include < cproc/.builds/openbsd.diff
 - build: |
-    PATH=$HOME/qbe/obj:$PATH
-    gmake -C qbe
+    PATH=$HOME/qbe:$PATH
+    make -C qbe
     cd cproc
     ./configure
     make all check bootstrap
