Don't spam mailing list with build failures
Add a separate list for this.

--- a/.builds/debian.yml
+++ b/.builds/debian.yml
@@ -12,4 +12,4 @@ tasks:
 triggers:
 - action: email
   condition: failure
-  to: "<~mcf/cproc@lists.sr.ht>"
+  to: "<~mcf/cproc-builds@lists.sr.ht>"
