--- a/.builds/alpine-aarch64.yml
+++ b/.builds/alpine-aarch64.yml
@@ -29,4 +29,4 @@ tasks:
 triggers:
 - action: email
   condition: failure
-  to: "<~mcf/cproc@lists.sr.ht>"
+  to: "<~mcf/cproc-builds@lists.sr.ht>"
