CI: Use upstream QBE in Debian aarch64 build
This was accidentally left as my personal branch when all the other
builds were updated.

--- a/.builds/debian-aarch64.yml
+++ b/.builds/debian-aarch64.yml
@@ -6,7 +6,7 @@ packages:
 - qemu-user-binfmt
 sources:
 - https://git.sr.ht/~mcf/cproc
-- https://git.sr.ht/~mcf/qbe
+- git://c9x.me/qbe.git
 tasks:
 - build: |
     PATH=$HOME/qbe:$PATH
