CI: Simplify alpine-aarch64.yml and debian-aarch64.yml

--- a/.builds/alpine-aarch64.yml
+++ b/.builds/alpine-aarch64.yml
@@ -12,13 +12,8 @@ tasks:
     tar --warning=no-unknown-keyword -xzf aarch64-linux-musl-cross.tgz
 - build: |
     PATH=$HOME/qbe:$HOME/aarch64-linux-musl-cross/bin:$PATH
-    cd qbe
-    cat >config.h <<EOF
-    #define Defasm Gaself
-    #define Deftgt T_arm64
-    EOF
-    make
-    cd ../cproc
+    make -C qbe
+    cd cproc
     ./configure \
       --target=aarch64-linux-musl \
       --with-ldso="$HOME/aarch64-linux-musl-cross/aarch64-linux-musl/lib/libc.so"
