--- a/.builds/debian-aarch64.yml
+++ b/.builds/debian-aarch64.yml
@@ -10,13 +10,8 @@ sources:
 tasks:
 - build: |
     PATH=$HOME/qbe:$PATH
-    cd qbe
-    cat >config.h <<EOF
-    #define Defasm Gaself
-    #define Deftgt T_arm64
-    EOF
-    make
-    cd ../cproc
+    make -C qbe
+    cd cproc
     crtbegin=$(aarch64-linux-gnu-gcc -print-file-name=crtbegin.o)
     ./configure \
       --target=aarch64-linux-gnu \
